--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "expo": "48.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.71.14",
+    "expo-task-manager": "~11.1.1",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
